испрользуем другой кодер base64
git-svn-id: https://svn.linux.org.ru/repos/lor/trunk@1253 3c041eb6-2c19-43cc-91a8-1cbaffc2ceed